//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Members {
  id Int [pk, increment]
  name String [not null]
  role String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  assignedAt DateTime
  assignments Member_Projects [not null]
}

Table Projects {
  id Int [pk, increment]
  name String [not null]
  description String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  assignments Member_Projects [not null]
}

Table Member_Projects {
  id Int [pk, increment]
  member_id Int [not null]
  project_id Int [not null]
  assignedAt DateTime [default: `now()`, not null]
  member Members [not null]
  project Projects [not null]

  indexes {
    (member_id, project_id) [unique]
  }
}

Enum MemberRole {
  BACKEND
  FRONTEND
  UI_UX
}

Ref: Member_Projects.member_id > Members.id

Ref: Member_Projects.project_id > Projects.id